--- a/.gitignore
+++ b/.gitignore
@@ -161,5 +161,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 
-.vscode/
+.vscode/*
 .vscode
+.vscode/PythonImportHelper-v2-Completion.json
+
+test.ipynb
